--- a/WcfMoto/WcfMoto.csproj
+++ b/WcfMoto/WcfMoto.csproj
@@ -142,6 +142,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utils\PropertyUtils.cs" />
     <Compile Include="ViewModels\AnnouncementForView.cs" />
+    <Compile Include="ViewModels\UserForView.cs" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
